<resources>
    <string name="app_name">PizzaPllugAlRyumin</string>
    <string name="price_title">Price</string>
    <string name="status_title">Status</string>
    <string name="description_title">Description</string>
    <string name="composition_title">Сomposition</string>
    <string name="order_button">Order</string>
    <string name="call_button">Call</string>
    <string name="ordered">Ordered</string>
    <string name="not_ordered">Not Ordered</string>
</resources>
